# rclib

./: .gitignore  .pre-commit-config.yaml  .skbuild-info.json  404.html  AGENTS.md  CLAUDE.md  CMakeInit.txt  CMakeLists.txt  GEMINI.md  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml
.claude/: settings.json
.claude/skills/check/: SKILL.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  create-release-draft.yml  docs.yml  release.yml
api/: index.html
benchmarks/: CMakeLists.txt  benchmark_omp_threads.sh  benchmark_parallel_comparison.sh  benchmark_ridge_all_solvers.cpp  compare_auto_solver.py  compare_reservoirpy.py  compare_rls_reservoirpy.py  plot_benchmark_results.py  plot_parallel_comparison.py  sweep_tolerance.py
cpp_core/: CMakeLists.txt
cpp_core/include/rcl/: Model.h  Readout.h  Reservoir.h
cpp_core/include/rcl/readouts/: LmsReadout.h  RidgeReadout.h  RlsReadout.h
cpp_core/include/rcl/reservoirs/: NvarReservoir.h  RandomSparseReservoir.h
cpp_core/include/rclib/: Model.h  Reservoir.h
cpp_core/include/rclib/readouts/: LmsReadout.h  RidgeLinearOperator.h  RidgeReadout.h  RlsReadout.h
cpp_core/include/rclib/reservoirs/: NvarReservoir.h  RandomSparseReservoir.h
cpp_core/src/: Model.cpp  Readout.cpp
cpp_core/src/readouts/: LmsReadout.cpp  RidgeReadout.cpp  RlsReadout.cpp
cpp_core/src/reservoirs/: NvarReservoir.cpp  RandomSparseReservoir.cpp
development/: index.html
development/release_process/: index.html
development/reports/RLS_Optimization_Report/: index.html
development/reports/Reservoir_Optimization_Report/: index.html
development/reports/Ridge_Optimization_Report/: index.html
development/testing_roadmap/: index.html
docs/: RLS_Optimization_Report.md  generate_pdf.sh  index.md
docs/api/: index.md
docs/development/: index.md  release_process.md  testing_roadmap.md
docs/development/reports/: RLS_Optimization_Report.md  Reservoir_Optimization_Report.md  Ridge_Optimization_Report.md  generate_pdf.sh
docs/theory/: index.md  readout_algorithms.md  reservoir_computing.md
docs/user_guide/: advanced_usage.md  core_concepts.md  index.md  installation.md  quick_start.md
examples/cpp/: CMakeLists.txt  compare_online_learning.cpp  generative_prediction.cpp  mackey_glass.cpp  multi_dimensional_prediction.cpp  online_learning.cpp  performance_benchmark.cpp  quick_online.cpp  quick_start.cpp  sine_wave_prediction.cpp
examples/python/: compare_online_learning.py  generative_prediction.py  mackey_glass.py  multi_dimensional_prediction.py  online_learning.py  quick_online.py  quick_start.py  sine_wave_prediction.py
python/: CMakeLists.txt
python/rcl/: _rcl.cpp  model.py  readouts.py  reservoirs.py
python/rclib/: __init__.py  _rclib.cpp  model.py  readouts.py  reservoirs.py
scripts/: bump_version.sh  setup-dev.sh
search/: search_index.json
src/: CMakeLists.txt
src/rcl/: __init__.py  _rcl.cpp  model.py  readouts.py  reservoirs.py
tests/cpp/: CMakeLists.txt  test_bias_effect.cpp  test_integration_mackey_glass.cpp  test_integration_online_learning.cpp  test_lms_readout.cpp  test_model.cpp  test_nvar_reservoir.cpp  test_readout.cpp  test_reservoir.cpp  test_ridge_dual.cpp  test_ridge_solver_auto.cpp  test_rls_minibatch.cpp  test_rls_readout.cpp
tests/python/: test_bias_effect.py  test_integration_online_learning.py  test_model.py  test_readouts.py  test_reservoirs.py  test_ridge_solver_auto.py  test_ridge_solvers.py
theory/: index.html
theory/readout_algorithms/: index.html
theory/reservoir_computing/: index.html
user_guide/: index.html
user_guide/advanced_usage/: index.html
user_guide/core_concepts/: index.html
user_guide/installation/: index.html
user_guide/quick_start/: index.html
