[project]
name = "rcl"
version = "0.0.1"
description = "A reservoir computing library"
authors = [{ name = "Hiroshi Atsuta" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[tool.scikit-build]
cmake.source-dir = "."
wheel.packages = ["src/rcl"]

[tool.pytest.ini_options]
testpaths = [
    "tests/python",
]

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".nox",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "build",
    "cpp_core/third_party",
]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
include = ["src", "tests", "examples"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
venvPath = "."
venv = ".venv"
